--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/faker": "^6.6.9",
+    "@faker-js/faker": "^7.5.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
@@ -23,7 +23,6 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.1",
     "eslint-plugin-standard": "^5.0.0",
-    "faker": "^6.6.6",
     "git-commit-msg-linter": "^4.1.3",
     "jest": "^29.0.3",
     "ts-jest": "^29.0.1",
