feat: ensure remoteAuthenticatin

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,9 @@
       "jsx": "react",
       "rootDirs": ["src"],
       "baseUrl": "src",
+      "paths": {
+        "@/*": ["*"]
+      },
       "allowJs": true,
       "resolveJsonModule": true,
       "allowSyntheticDefaultImports": true,
