--- a/package.json
+++ b/package.json
@@ -26,5 +26,9 @@
     "jest": "^29.0.3",
     "ts-jest": "^29.0.1",
     "typescript": "^4.8.3"
+  },
+  "dependencies": {
+    "@types/axios": "^0.14.0",
+    "axios": "^1.1.2"
   }
 }
