--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@faker-js/faker": "^7.5.0",
     "@types/jest": "^29.0.3",
     "@types/node": "^18.7.18",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.37.0",
     "eslint": "^8.23.1",
     "eslint-config-standard-with-typescript": "^23.0.0",
@@ -29,6 +31,8 @@
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
-    "axios": "^1.1.2"
+    "axios": "^1.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
