--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "eslint-plugin-standard": "^5.0.0",
     "jest": "^29.0.3",
     "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3"
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
     "@types/axios": "^0.14.0",
