--- a/package.json
+++ b/package.json
@@ -4,38 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --passWithNoTests",
-    "test:watch": "npm test -- --watch",
-    "test:staged": "npm test -- --findRelatedTests",
-    "test:ci": "npm test -- --coverage"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GUILHERMEPSANTOS/clean-react.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
-    "@faker-js/faker": "^7.5.0",
-    "@types/jest": "^29.0.3",
-    "@types/node": "^18.7.18",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
-    "@typescript-eslint/eslint-plugin": "^5.37.0",
-    "eslint": "^8.23.1",
-    "eslint-config-standard-with-typescript": "^23.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-standard": "^5.0.0",
-    "jest": "^29.0.3",
-    "ts-jest": "^29.0.1",
-    "typescript": "^4.8.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+  "bugs": {
+    "url": "https://github.com/GUILHERMEPSANTOS/clean-react/issues"
   },
-  "dependencies": {
-    "@types/axios": "^0.14.0",
-    "axios": "^1.1.2",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  }
+  "homepage": "https://github.com/GUILHERMEPSANTOS/clean-react#readme"
 }
