--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.4.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "typescript": "^4.9.4"
   }
 }
