--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "DOM.Iterable",
       "ESNext"
     ],
+    
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "node",
@@ -18,7 +19,7 @@
     "strict": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "isolatedModules": true,
+    "isolatedModules": false,
     "noEmit": true,
   },
   "include": [
