--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,18 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES6",
     "lib": [
       "DOM",
       "DOM.Iterable",
       "ESNext"
     ],
-    
     "esModuleInterop": true,
     "module": "ESNext",
     "moduleResolution": "node",
     "jsx": "react",
-    "rootDir": "src",
+    "rootDirs": [
+      "src"
+    ],
     "baseUrl": "src",
     "allowJs": true,
     "skipLibCheck": true,
