--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,8 +23,11 @@
     ],
     "rules": {
         "no-unused-vars": "off",
+        "import/no-unresolved": "off",
         "no-undef": "off",
+        "import/extensions": "off",
         "linebreak-style": 0,
+        "no-trailing-spaces": "off",
         "class-methods-use-this": "off",
         "import/prefer-default-export": "off",
         "@typescript-eslint/consistent-type-definitions": "off",
