--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,9 @@
       "src"
     ],
     "baseUrl": "src",
+    "paths": {
+      "@/*": ["*"]
+    },
     "allowJs": true,
     "skipLibCheck": true,
     "allowSyntheticDefaultImports": true,
