--- a/package.json
+++ b/package.json
@@ -23,14 +23,15 @@
   "homepage": "https://github.com/GUILHERMEPSANTOS/clean-react#readme",
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
-    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^3.5.2",
-    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-import-helpers": "^1.3.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-node": "^11.1.0",
@@ -43,5 +44,10 @@
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "-": "^0.0.1",
+    "axios": "^1.2.2",
+    "D": "^1.0.0"
   }
 }
