--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@types/axios": "^0.14.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "eslint": "^8.30.0",
@@ -46,8 +48,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "axios": "^1.2.2",
-    "D": "^1.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
