--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,8 @@
 {
-    "env": {
-        "browser": true,
-        "es2021": true
+    "settings": {
+        "react": {
+            "version": "detact"
+        }
     },
     "extends": [
         "plugin:react/recommended",
@@ -9,35 +10,30 @@
     ],
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true,
-            "tsx": true
-        },
-        "ecmaVersion": "latest",
-        "sourceType": "module"
+        "project": "./tsconfig.json"
     },
     "plugins": [
-        "react",
-        "@typescript-eslint"
+        "react"
     ],
     "rules": {
-        "@typescript-eslint/no-floating-promises": "error",
-        "no-shadow": "off",
-        "import/no-extraneous-dependencies": "off",
-        "no-empty-function": "off",
-        "no-useless-constructor": "off",
-        "indent":"off",
-        "max-classes-per-file": "off",
-        "no-empty-pattern": "off",
-        "no-unused-vars": "off",
-        "import/no-unresolved": "off",
-        "no-undef": "off",
-        "import/extensions": "off",
-        "linebreak-style": 0,
-        "no-trailing-spaces": "off",
-        "class-methods-use-this": "off",
-        "import/prefer-default-export": "off",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error",
         "@typescript-eslint/consistent-type-definitions": "off",
         "@typescript-eslint/strict-boolean-expressions": "off"
+        // "no-shadow": "off",
+        // "import/no-extraneous-dependencies": "off",
+        // "no-empty-function": "off",
+        // "no-useless-constructor": "off",
+        // "indent": "off",
+        // "max-classes-per-file": "off",
+        // "no-empty-pattern": "off",
+        // "no-unused-vars": "off",
+        // "import/no-unresolved": "off",
+        // "no-undef": "off",
+        // "import/extensions": "off",
+        // "linebreak-style": 0,
+        // "no-trailing-spaces": "off",
+        // "class-methods-use-this": "off",
+        // "import/prefer-default-export": "off"
     }
 }
