--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "jest --passWithNoTests",
+    "dev":"webpack-dev-server --open",
+    "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
     "test:ci": "npm test -- --coverege"
@@ -30,6 +31,7 @@
     "@types/react-dom": "^18.0.10",
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
+    "clean-webpack-plugin": "^4.0.0",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -42,12 +44,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^8.0.2",
+    "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
+    "webpack-dev-middleware": "^6.0.1",
     "webpack-dev-server": "^4.11.1"
   },
   "dependencies": {
