--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev":"webpack-dev-server --open",
+    "dev": "webpack-dev-server --open",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm test -- --watch",
     "test:staged": "npm test -- --findRelatedTests",
@@ -32,6 +32,7 @@
     "@typescript-eslint/eslint-plugin": "^5.47.0",
     "@typescript-eslint/parser": "^5.47.0",
     "clean-webpack-plugin": "^4.0.0",
+    "css-loader": "^6.7.3",
     "eslint": "^8.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-import-resolver-typescript": "^3.5.2",
@@ -44,9 +45,14 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "git-commit-msg-linter": "^4.4.0",
     "husky": "^8.0.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest-environment-jsdom": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "ts-jest": "^29.0.3",
+    "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
